--- a/ch 3.Rmd
+++ b/ch 3.Rmd
@@ -4,4 +4,22 @@ author: "Britt"
 date: '2022-08-30'
 output: html_document
 ---
-lol let's test this
+Ch. 3: Vectors
+
+3.1 Introduction
+
+atomic vectors: 
+lists:
+NULL: 
+
+```{r}
+lgl_var <- c(TRUE, FALSE)
+int_var <- c(1L, 6L, 10L)
+dbl_var <- c(1, 2.5, 4.5)
+chr_var <- c("these are", "some strings")
+```
+lol
+```{r}
+
+```
+
